--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,3 +13,5 @@ RoxygenNote: 7.1.1
 Suggests: 
     testthat,
     covr
+URL: https://github.com/trianglegirl/rockstaR
+BugReports: https://github.com/trianglegirl/rockstaR/issues
