--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,14 +2,19 @@ Package: rockstaR
 Type: Package
 Title: What the Package Does (Title Case)
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Author: Rhian Davies
+Maintainer: Rhian Davies <rhian@jumpingrivers.com>
+Description: R transpiler for the esoteric language Rockstar.
+    Rockstar is a dynamically typed computer programming language, 
+    designed for creating programs that are also song lyrics.
+    Rockstar is heavily influenced by the lyrical conventions of 1980s
+    hard rock and power ballads.
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
+Imports:
+    stringr
 Suggests: 
     testthat,
     covr
