--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,6 +14,10 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
 Imports:
+    glue,
+    magrittr,
+    purrr,
+    rlang,
     stringr
 Suggests: 
     testthat,
